# dslab1

./: .gitignore  README.md  TODO  app.py  clean.py  logic.txt  main.py  path.py  paths.py  pyproject.toml  requirements.txt  results.xlsx  run.py  schemas.py  test.ipynb  test.py
agents/: cmdagent.py  configfiller.py  consultant.py  deploymentagent.py  evaluationagent.py  planner.py  processor.ipynb  processoragent.ipynb  processoragent.py  reporter.py  trainagent.py
configuration/: constants.json  consultation.json  metricoptions.md  metrics.json  modeloptions.md  runtimeconfig.json
data/: ibmchurn_processed.csv
dslab1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eda/: EDA_class_plan.md  analysis.py  config.py  eda.py  readers.py
llms/: codex.py  generation.py
memory/: varregister.py
models/: codex.py  generation.py
prompts/: cmdagent.md  codexcodeprompt.md  codexfixprompt.md  codexreasoningprompt.md  configfiller.md  consultant.md  consultantassistant.md  evaluationprompt.md  featurecolumns.md  manageragent.md  parametertuneprompt.md  planner.md  predictionfunctionprompt.md  processingplanprompt.md  processorreasoningprompt.md  reportprompt.md  targetdetector.md  trainplanprompt.md  trainreasoningprompt.md
sandbox/: model.pkl  preprocessing.py  processing.py  processingplan.md  train.py  trainingplan.md
tools/: coderunner.py  datareader.py  datasplitter.py  deployer.py  eda.py  featuredecider.py  metrics.py  notebook.py  reportwriter.py  test.py  transfer.py
vm/: api.py  prediction.py  requirements.txt
workspace/: ibmchurneda.md  plan.json  (+5 more)
