[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dslab1"
version = "0.1.0"

[tool.setuptools]
py-modules = ["paths", "schemas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "configuration*", "data*", "llms*", "models*", "prompts*", "sandbox*", "tools*", "vm*"]